--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application" %>
   </head>
-
   <body>
+  <header>
+  <h1>Sistema de Fretes</h1>
+   <nav>
+      <%= link_to 'Ordens de Serviço', root_path %> |
+  </header>
     <%= yield %>
   </body>
 </html>
