--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -8,7 +8,7 @@
 <div>
 <% @work_orders.each do |w| %>
   <div>
-    <h3>Código: <%= w.code %> </h3>
+    <h3>Código: <%= link_to(w.code, work_order_path(w.id)) %> </h3>
       <dl>
         <dt>Endereço de saída: <%= w.pickup_address %></dt>
         <dt>Endereço de entrega: <%= w.delivery_address%></dt>
