--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <h1>Sistema de Fretes</h1>
    <nav>
       <%= link_to 'Ordens de Serviço', root_path %> |
+      <%= link_to 'Modalidades de Transporte', shipping_types_path %> |
       <% if user_signed_in? %>
         <%= current_user.description %>
         <br> <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
