work on shipping types

--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -8,5 +8,5 @@
 <% end %>
 <h2>Nova ordem de serviço</h2>
 <%= render 'form' %><br>
-<%= link_to 'Voltar', root_path %>
+<%= link_to 'Voltar', work_orders_path %>
 
