--- a/app/views/shipping_types/index.html.erb
+++ b/app/views/shipping_types/index.html.erb
@@ -1,20 +1,16 @@
 <section id="shipping_types">
 <h2>Modalidades de Transporte</h2>
 <%= link_to 'Adicionar nova modalidade de transporte', new_shipping_type_path %>
-
-<div>
-  <%= flash[:notice] %>
-</div>
 <div>
 <% @shipping_types.each do |s| %>
   <div>
-    <h3><%= link_to(w.name, shipping_type_path(s.id)) %> </h3>
+    <h3><%= link_to(s.name, shipping_type_path(s.id)) %> </h3>
       <dl>
-        <dt>Distância mínima: <%= s.minimum_distance %></dt>
-        <dt>Distância máxima: <%= s.maximum_distance %>
-        <dt>Peso mínimo: <%= s.minimum_weight %>
-        <dt>Peso máximo: <%= s.maximum_weight %>
-        <dt>Taxa:<%= s.fee %>
+        <dt>Distância mínima: <%= s.minimum_distance %>km</dt>
+        <dt>Distância máxima: <%= s.maximum_distance %>km
+        <dt>Peso mínimo: <%= s.minimum_weight %>g
+        <dt>Peso máximo: <%= s.maximum_weight %>g
+        <dt>Taxa: <%= s.fee %>
         <dt>Status: </dt>
       <dl>
     </div>  
