--- a/app/views/work_orders/edit.html.erb
+++ b/app/views/work_orders/edit.html.erb
@@ -1,4 +1,3 @@
-<br><%= flash[:notice] %>
 <% if(@work_order.errors.any?) %>
   <p>Verifique os erros abaixo:</p>
   <ul>
@@ -9,4 +8,4 @@
 <% end %>
 <h2>Editar ordem de serviço <%= @work_order.code %> </h2>
 <%= render 'form' %><br>
-<%= link_to 'Voltar', root_path %>
+<%= link_to 'Voltar', work_order_path %>
