--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,12 +19,19 @@
    <nav>
       <%= link_to 'Ordens de Serviço', root_path %> |
       <%= link_to 'Modalidades de Transporte', shipping_types_path %> |
+      <%= link_to 'Veículos', vehicles_path %> |
       <% if user_signed_in? %>
         <%= current_user.description %>
         <br> <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
       <% else %>
           <%= link_to 'Log in', new_user_session_path %>
       <% end %>
+      <%= form_with(url: search_work_orders_path, method: :get) do |f| %>
+        <%= f.label :query, 'Buscar ordem de serviço' %>
+        <%= f.text_field :query %>
+        <%= f.submit 'Buscar' %>
+      <% end %>
+      </nav>
   </header>
   <main>
     <%= alert %>
