--- a/app/views/vehicles/search.html.erb
+++ b/app/views/vehicles/search.html.erb
@@ -1,5 +1,5 @@
 <h2>Resultado da busca por: <%= @code %></h2>
 
-<% @work_orders.each do |w| %>
-  <%= render w %>
+<% @vehicles.each do |v| %>
+  <%= render v %>
 <% end %>
