fix bugs and translations

--- a/app/views/shipping_types/_form.html.erb
+++ b/app/views/shipping_types/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :fee, 'Taxa:' %>
     <%= f.number_field :fee %>
   </div>
+    <div>
+    <%= f.label :active, 'Ativada:' %>
+    <%= f.check_box :active %>
+  </div>
   <div>
     <br><%= f.submit 'Salvar' %>
   </div>
