--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -19,12 +19,10 @@
     <%= f.label :load_capacity, 'Capacidade de carga:' %>
     <%= f.number_field :load_capacity %>
   </div>
-    <%= f.label :maintenance, 'Em manutenção' %>
+  <div>
+    <%= f.label :maintenance, 'Em manutenção:' %>
     <%= f.check_box :maintenance %>
-  <div>
   </div>
-
-  <div>
     <br><%= f.submit 'Salvar' %>
   </div>
 <% end %>
