Add delivery time configurations

--- a/app/views/configurations/index.html.erb
+++ b/app/views/configurations/index.html.erb
@@ -1,6 +1,6 @@
 <section id="configurations">
 <h2>Configurações</h2>
-<%= link_to 'Configurações de preço por peso', weight_configurations_path %>
-<h3>Configurações de prazo</h3>
+<%= link_to 'Configurações de preço por peso', weight_configurations_path %><br>
+<%= link_to 'Configurações de prazo', delivery_time_configurations_path %><br>
 <h3>Configurações de preço por distância percorrida</h3>
 </section>
