Add price per distance configutation

--- a/app/views/weight_configurations/new.html.erb
+++ b/app/views/weight_configurations/new.html.erb
@@ -8,4 +8,4 @@
 <% end %>
 <h2>Nova configuração de preço por peso</h2>
 <%= render 'form' %><br>
-<%= link_to 'Voltar', work_orders_path %>
+<%= link_to 'Voltar', weight_configurations_path %>
