Add tables for configurations

--- a/app/views/price_per_distance_configurations/_form.html.erb
+++ b/app/views/price_per_distance_configurations/_form.html.erb
@@ -8,8 +8,8 @@
     <%= f.number_field :maximum_distance %>
   </div>
     <div>
-    <%= f.label :price, 'Preço:' %>
-    <%= f.number_field :price %>
+    <%= f.label :price_per_distance, 'Preço:' %>
+    <%= f.number_field :price_per_distance %>
   </div>
     <div>
     <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
