--- a/app/views/delivery_time_configurations/index.html.erb
+++ b/app/views/delivery_time_configurations/index.html.erb
@@ -4,3 +4,19 @@
 <% if @delivery_time_configurations.empty? %>
   <p> Não existem configurações cadastradas. </p>
 <% end %>
+
+<p>Tabela de prazos</p>
+<table>
+  <tr>
+    <th>Intervalo de distância</th>
+    <th>Prazo</th>
+    <th>Modalidade de transporte</th>
+  </tr>
+  <% @delivery_time_configurations.each do |d| %>
+    <tr>
+      <td><%= d.minimum_distance %> a <%= d.maximum_distance %>km</td>
+      <td><%= d.delivery_time %>h</td>
+      <td><%= d.shipping_type.name %></td>
+    </tr>
+  <% end %>
+</table>
