--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,7 +1,7 @@
 <h2>Veículo: <%= @vehicle.manufacturer %> <%= @vehicle.model %> - <%= @vehicle.license_plate %> </h2>
 <div>
   <strong>Ano de fabricação: </strong><%= @vehicle.year %><br>
-  <strong>Capacidade de carga: </strong><%= @vehicle.load_capacity %>g<br>
+  <strong>Capacidade de carga: </strong><%= @vehicle.load_capacity/100 %>kg<br>
   <strong>Em manutenção: </strong> <%= I18n.translate(@vehicle.maintenance) %><br>
   <strong>Disponível: </strong><%= I18n.translate(@vehicle.available) %><br>
 </div>
