--- a/app/views/weight_configurations/index.html.erb
+++ b/app/views/weight_configurations/index.html.erb
@@ -2,5 +2,20 @@
 <%= link_to 'Adicionar nova configuração', new_weight_configuration_path %>
 
 <% if @weight_configurations.empty? %>
-  <p> Não existem configurações cadastradas. </p>
+  <p> Não existem configurações cadastradas. </p><br>
 <% end %>
+
+<p>Tabela de preço por peso</p>
+<table>
+  <tr>
+    <th>Intervalo de peso</th>
+    <th>Preço</th>
+  </tr>
+  <% @weight_configurations.each do |w| %>
+    <tr>
+      <td><%= w.minimum_weight %> a <%= w.maximum_weight %>g</td>
+      <td><%= number_to_currency(w.price/100.to_f) %></td>
+    </tr>
+  <% end %>
+</table>
+
