--- a/app/views/shipping_types/show.html.erb
+++ b/app/views/shipping_types/show.html.erb
@@ -5,7 +5,7 @@
   <strong>Peso mínimo: </strong><%= @shipping_type.minimum_weight/100 %>kg<br>
   <strong>Peso máximo: </strong><%= @shipping_type.maximum_weight/100 %>kg<br>
   <strong>Taxa: </strong><%= number_to_currency(@shipping_type.fee/100) %> <br>
-  <strong>Ativada: </strong><%= @shipping_type.active %> <br>
+  <strong>Ativada: </strong><%= I18n.translate(@shipping_type.active.to_s) %> <br>
 
 </div>
 
