--- a/app/views/delivery_time_configurations/index.html.erb
+++ b/app/views/delivery_time_configurations/index.html.erb
@@ -11,12 +11,14 @@
     <th>Intervalo de distância</th>
     <th>Prazo</th>
     <th>Modalidade de transporte</th>
+    <th></th>
   </tr>
   <% @delivery_time_configurations.each do |d| %>
     <tr>
       <td><%= d.minimum_distance %> a <%= d.maximum_distance %>km</td>
       <td><%= d.delivery_time %>h</td>
       <td><%= d.shipping_type.name %></td>
+      <td><%= button_to('Remover', delivery_time_configuration_path(d.id), method: :delete) %></td>
     </tr>
   <% end %>
 </table>
