--- a/app/views/delivery_time_configurations/new.html.erb
+++ b/app/views/delivery_time_configurations/new.html.erb
@@ -8,5 +8,5 @@
 <% end %>
 <h2>Nova configuração de prazo</h2>
 <%= render 'form' %><br>
-<%= link_to 'Voltar', root_path %>
+<%= link_to 'Voltar', delivery_time_configurations_path %>
 
