--- a/app/views/shipping_types/index.html.erb
+++ b/app/views/shipping_types/index.html.erb
@@ -10,8 +10,8 @@
         <dt>Distância máxima: <%= s.maximum_distance %>km
         <dt>Peso mínimo: <%= s.minimum_weight/100 %>kg
         <dt>Peso máximo: <%= s.maximum_weight/100 %>kg
-        <dt>Taxa: <%= number_to_currency(s.fee/100) %>
-        <dt>Status: </dt>
+        <dt>Taxa: <%= number_to_currency(s.fee/100.to_f) %>
+        <dt>Ativada: <%= I18n.translate(s.active.to_s) %></dt>
       <dl>
     </div>  
 <% end %>
