--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -3,7 +3,7 @@
   <strong>Endereço de saída: </strong><%= @work_order.pickup_address %><br>
   <strong>Endereço de entrega: </strong><%= @work_order.delivery_address %><br>
   <strong>Distância: </strong><%= @work_order.distance %>km<br>
-  <strong>Peso do produto: </strong><%= @work_order.product_weight/100 %>kg<br>
+  <strong>Peso do produto: </strong><%= @work_order.product_weight/100.to_f%>kg<br>
   <strong>Código do produto: </strong><%= @work_order.product_code %> <br>
   <strong>Status: </strong><%= I18n.translate(@work_order.status) %> <strong> <br>
 </div>
