add email barrier and work orders search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
   <header>
   <h1>Sistema de Fretes</h1>
    <nav>
-      <%= link_to 'Ordens de Serviço', root_path %> |
-      <%= link_to 'Modalidades de Transporte', shipping_types_path %> |
-      <%= link_to 'Veículos', vehicles_path %> |
-      <%= link_to 'Configurações', configurations_path %> |
       <% if user_signed_in? %>
+        <%= link_to 'Ordens de Serviço', work_orders_path %> |
+        <%= link_to 'Modalidades de Transporte', shipping_types_path %> |
+        <%= link_to 'Veículos', vehicles_path %> |
+        <%= link_to 'Configurações', configurations_path %> |
         <%= current_user.description %>
         <br> <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
       <% else %>
