--- a/app/views/weight_configurations/_form.html.erb
+++ b/app/views/weight_configurations/_form.html.erb
@@ -12,6 +12,10 @@
     <%= f.number_field :price %>
   </div>
   <div>
+    <%= f.label :shipping_type_id, 'Modalidade de transporte:' %>
+    <%= f.select :shipping_type_id, WeightConfiguration.shipping_types_for_select %><br>
+  </div>
+  <div>
     <br><%= f.submit 'Salvar' %>
   </div>
 <% end %>
