--- a/app/views/weight_configurations/index.html.erb
+++ b/app/views/weight_configurations/index.html.erb
@@ -10,12 +10,14 @@
   <tr>
     <th>Intervalo de peso</th>
     <th>Preço</th>
+    <th>Modalidade de transporte</th>
     <th></th>
   </tr>
   <% @weight_configurations.each do |w| %>
     <tr>
       <td><%= w.minimum_weight/100 %> a <%= w.maximum_weight/100 %>kg</td>
       <td><%= number_to_currency(w.price/100.to_f) %></td>
+      <td><%= w.shipping_type.name %></td>
       <td><%= button_to('Remover', weight_configuration_path(w.id), method: :delete) %></td>
     </tr>
   <% end %>
