--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -6,14 +6,14 @@
   <strong>Peso do produto: </strong><%= @work_order.product_weight/100.to_f%>kg<br>
   <strong>Código do produto: </strong><%= @work_order.product_code %> <br>
   <strong>Status: </strong><%= I18n.translate(@work_order.status) %><br>
-  <% if @work_order.status = 4 %>
+  <% if @work_order.status == 'on_the_way' %>
     <strong>Veículo: </strong><%= @work_order.vehicle.license_plate.upcase %></strong> <br>
-    <strong>Prazo: </strong> <%= @work_order.date %><br>
+    <strong>Prazo: </strong> <%= I18n.localize(@work_order.date)%><br>
     <strong>Data de início: </strong><%= I18n.localize(@work_order.start_date) %><br>
   <% end %>
   <% if @work_order.shipping_type %>
     <strong>Modalidade de transporte:</strong> <%= @work_order.shipping_type.name %> - <%= number_to_currency(@work_order.price) %><br>
-    <% if @work_order.status = 0 %>
+    <% if @work_order.status == 'pending' %>
     <%= button_to('Iniciar ordem de serviço', work_order_start_path(@work_order.id), method: :post) %>
     <% end %>
   <% end %>
