--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -6,17 +6,20 @@
   <strong>Peso do produto: </strong><%= @work_order.product_weight/100.to_f%>kg<br>
   <strong>Código do produto: </strong><%= @work_order.product_code %> <br>
   <strong>Status: </strong><%= I18n.translate(@work_order.status) %><br>
+
   <% if @work_order.status == 'on_the_way' %>
     <strong>Veículo: </strong><%= @work_order.vehicle.license_plate.upcase %></strong> <br>
     <strong>Prazo: </strong> <%= I18n.localize(@work_order.date)%><br>
     <strong>Data de início: </strong><%= I18n.localize(@work_order.start_date) %><br>
   <% end %>
+
   <% if @work_order.status == 'delivered' %>
     <strong>Veículo: </strong><%= @work_order.vehicle.license_plate.upcase %></strong> <br>
     <strong>Prazo: </strong> <%= I18n.localize(@work_order.date)%><br>
     <strong>Data de início: </strong><%= I18n.localize(@work_order.start_date) %><br>
     <strong>Data de finalização: </strong><%= I18n.localize(@work_order.end_date) %><br>
   <% end %>
+
   <% if @work_order.shipping_type %>
     <strong>Modalidade de transporte:</strong> <%= @work_order.shipping_type.name %> - <%= number_to_currency(@work_order.price) %><br>
     <% if @work_order.status == 'pending' %>
@@ -27,10 +30,12 @@
     <% end %>
   <% end %>
 </div>
+
 <%= link_to('Voltar', work_orders_path) %><br>
 
-<% if !(@work_order.status == 'delivered' || @work_order.status == 'canceled' || @work_order.status == 'late') %>
+<% if @work_order.status != 'delivered' && @work_order.status != 'canceled' && @work_order.status != 'late' %>
   <br><%= link_to('Editar', edit_work_order_path(@work_order.id)) %><br><br>
+
   <h3>Modalidades de transporte disponíveis:</h3>
   <% @available_shipping_types.each do |s| %>
     <table>
@@ -46,11 +51,12 @@
       </tr>
     </table>
   <% end %>
-<% end %>
 
   <% if @available_shipping_types.empty? %>
-  <p> Não existem modalidades de transporte disponíveis para atender esta ordem de serviço. </p>
+    <p> Não existem modalidades de transporte disponíveis para atender esta ordem de serviço. </p>
+  <% end %>
 <% end %>
+
 
 
 
