--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -3,7 +3,7 @@
   <strong>Ano de fabricação: </strong><%= @vehicle.year %><br>
   <strong>Capacidade de carga: </strong><%= @vehicle.load_capacity/100 %>kg<br>
   <strong>Em manutenção: </strong> <%= I18n.translate(@vehicle.maintenance) %><br>
-  <strong>Disponível: </strong><%= I18n.translate(@vehicle.available) %><br>
+  <strong>Disponível: </strong><%= I18n.translate(@vehicle.available && !@vehicle.maintenance) %><br>
 </div>
 
 <%= link_to('Editar', edit_vehicle_path(@vehicle.id)) %><br><br>
