--- a/app/views/work_orders/pending.html.erb
+++ b/app/views/work_orders/pending.html.erb
@@ -1,22 +1,23 @@
 <section id="pending work_orders">
 <h2>Ordens de Serviço Pendentes</h2>
 <div>
-Número de ordens de serviço pendentes encontradas: <%= @pending_work_orders.count %>
+Número de ordens de serviço pendentes encontradas: <%= @pending_work_orders.count %><br>
+<%= link_to('Voltar', work_orders_path) %><br>
 </div>
 <div>
 <% @pending_work_orders.each do |w| %>
   <div>
-    <h3>Código: <%= link_to(w.code, work_order_path(w.id)) %> </h3>
+    <h3>Código: <%= link_to(w.code, work_order_path(w.id)) %></h3>
       <dl>
         <dt>Endereço de saída: <%= w.pickup_address %></dt>
         <dt>Endereço de entrega: <%= w.delivery_address%></dt>
         <dt>Código do produto: <%= w.product_code %>
-        <dt>Status: <%= I18n.translate(w.status) %> </dt>
+        <dt>Status: <%= I18n.translate(w.status) %></dt>
       <dl>
   </div> 
 <% end %>
-  <% if @pending_work_orders.empty? %>
-    <p> Não existem ordens de serviço pendentes no momento. </p>
-  <% end %> 
+<% if @pending_work_orders.empty? %>
+  <p> Não existem ordens de serviço pendentes no momento.</p>
+<% end %> 
 </section>
 
