--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,7 +1,9 @@
 <section id="work_orders">
 <h2>Ordens de Serviço</h2>
 <div>
-<%= link_to 'Adicionar nova ordem de serviço', new_work_order_path %><br>
+<% if current_user.admin? %>
+  <%= link_to 'Adicionar nova ordem de serviço', new_work_order_path %><br>
+<% end %>
 <%= link_to 'Mostrar ordens de serviço pendentes', pending_work_orders_path %><br>
 </div>
 <% @work_orders.each do |w| %>
