--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,30 +9,37 @@
   </head>
   <body>
   <header>
-  <h1>Sistema de Fretes</h1>
-   <nav>
+    <div class='first-line'>
+      <h1>Sistema de Fretes</h1>
       <% if user_signed_in? %>
-        <%= link_to 'Ordens de Serviço', work_orders_path %> |
-        <%= link_to 'Modalidades de Transporte', shipping_types_path %> |
-        <%= link_to 'Veículos', vehicles_path %> |
-        <%= link_to 'Configurações', configurations_path %> |
-        <%= current_user.description %>
-        <br> <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
+        <div>
+          <span><%= current_user.description %></span>
+          <%= button_to 'Log out', destroy_user_session_path, method: :delete %>
+        </div>
       <% else %>
-          <%= link_to 'Log in', new_user_session_path %>
+        <%= link_to 'Log in', new_user_session_path %>
       <% end %>
-      <%= form_with(url: search_work_orders_path, method: :get) do |f| %>
-        <%= f.label :query, 'Buscar ordem de serviço' %>
-        <%= f.text_field :query %>
+    </div>
+    <nav>
+      <% if user_signed_in? %>
+        <div>
+          <%= link_to 'Ordens de Serviço', work_orders_path, class: controller_name == 'work_orders' ? 'selected': '' %> |
+          <%= link_to 'Modalidades de Transporte', shipping_types_path, class: controller_name == 'shipping_types' ? 'selected': ''  %> |
+          <%= link_to 'Veículos', vehicles_path, class: controller_name == 'vehicles' ? 'selected': ''  %> |
+          <%= link_to 'Configurações', configurations_path, class: controller_name == 'configurations' ? 'selected': ''  %> 
+        </div>
+      <% end %>
+      <%= form_with(url: search_work_orders_path, method: :get, class: 'search-form') do |f| %>
+        
+        <%= f.text_field :query, placeholder: 'Insira o código da ordem de serviço', class: 'search-bar' %>
         <%= f.submit 'Buscar' %>
       <% end %>
-      </nav>
+    </nav>
   </header>
   <main>
     <%= alert %>
     <%= notice %>
-
-  </main>
     <%= yield %>
+  </main>
   </body>
 </html>
