--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -5,6 +5,7 @@
   <strong>Em manutenção: </strong> <%= I18n.translate(@vehicle.maintenance) %><br>
   <strong>Disponível: </strong><%= I18n.translate(@vehicle.available && !@vehicle.maintenance) %><br>
 </div>
-
-<%= link_to('Editar', edit_vehicle_path(@vehicle.id)) %><br><br>
+<% if current_user.admin? %>
+  <%= link_to('Editar', edit_vehicle_path(@vehicle.id)) %><br><br>
+<% end %>
 <%= link_to('Voltar', vehicles_path) %>
